--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
 		<img src="bald-eagle.jpg" alt="bald-eagle" class="card__image">
 		<div class="card__information">
 			<!-- your favorite animal's interesting fact goes here -->
-			<p class="card__fact">The Bald Eagle is a bird of prey found in North America.</p>
+			<p class="card__fact">Bald eagles are not actually bald;</p>
 			<ul class="card__list">  
 				<!-- your favorite animal's list items go here -->
 				<li class="item">
-					<span class="label">Label</span>: Item #1
+					<span class="label">Range</span>The bald eagle's natural range covers most of North America, including most of Canada, all of the continental United States, and northern Mexico.
 				</li>
 				<li class="item">
-					<span class="label">Label</span>: Item #2
+					<span class="label">Habitat</span>The bald eagle occurs during its breeding season in virtually any kind of American wetland habitat such as seacoasts, rivers, large lakes or marshes or other large bodies of open water with an abundance of fish. 
 				</li>
 				<li class="item">
-					<span class="label">Label</span>: Item #3
+					<span class="label">Behavior</span>The bald eagle is a powerful flier, and soars on thermal convection currents. It reaches speeds of 56–70 km/h (35–43 mph) when gliding and flapping, and about 48 km/h (30 mph) while carrying fish.
 				</li>
 				<li class="item">
-					<span class="label">Label</span>: Item #4
+					<span class="label">Diet and feeding</span>The bald eagle is an opportunistic carnivore with the capacity to consume a great variety of prey. Throughout their range, fish often comprise the majority of the eagle's diet.
 				</li>
 			</ul>
 			<!-- your favorite animal's description goes here -->
-			<p class="card__description">Write a brief description about your favorite animal...</p>
+			<p class="card__description">The bald eagle (Haliaeetus leucocephalus) is a bird of prey found in North America. A sea eagle, it has two known subspecies and forms a species pair with the white-tailed eagle (Haliaeetus albicilla). Its range includes most of Canada and Alaska, all of the contiguous United States, and northern Mexico. It is found near large bodies of open water with an abundant food supply and old-growth trees for nesting. </p>
 		</div>
 	</div>
 </body>
